--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "vue2-easy-print",
   "version": "1.0.0",
   "private": false,
+  "main": "lib/print.umd.min.js",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name print --dest lib src/print/index.js"
   },
   "repository": {
     "type": "git",
